# rover_ros

./: README.md
rover_bringup/: CMakeLists.txt  README.md  package.xml
rover_bringup/launch/: rover_bringup.launch.py
rover_bringup/scripts/: 60-plc-init.yaml  60-switch-init.yaml  60-wifi-init.yaml  99-elrs.rules  99-libphidget22.rules
rover_controller/: CMakeLists.txt  README.md  package.xml
rover_controller/config/: wheel_01_controller.yaml
rover_controller/launch/: controller.launch.py
rover_crfs_teleop/: CMakeLists.txt  README.md  package.xml
rover_crfs_teleop/include/rover_crfs_teleop/: rover_crfs_teleop_controller.hpp
rover_crfs_teleop/launch/: rover_crfs_teleop.launch.py
rover_crfs_teleop/src/: rover_crfs_teleop_controller.cpp  rover_crfs_teleop_node.cpp
rover_description/: CMakeLists.txt  README.md  package.xml
rover_description/config/: components.yaml  wheel_01.yaml
rover_description/launch/: rover_load_urdf.launch.py  rover_rviz.launch.py
rover_description/meshes/wheel_01/: fl_wheel.STL  fr_wheel.STL  rl_wheel.STL  rr_wheel.STL
rover_description/rviz/: rover.rviz
rover_description/urdf/: rover_a1.urdf.xacro
rover_description/urdf/common/: gazebo_system.urdf.xacro  imu.urdf.xacro  system.urdf.xacro  wheel.urdf.xacro
rover_description/urdf/rover_a1/: base.urdf.xacro  rover_a1_macro.urdf.xacro
rover_diag_manager/: CMakeLists.txt  README.md  package.xml
rover_diag_manager/include/rover_diag_manager/system_diag/: filesystem.hpp  system_diag_node.hpp  types.hpp
rover_diag_manager/launch/: system_diag.launch.py
rover_diag_manager/src/: system_diag.cpp  system_diag_params.yaml
rover_diag_manager/src/system_diag/: system_diag_node.cpp
rover_gazebo/: CMakeLists.txt  README.md  package.xml
rover_gazebo/config/: gz_bridge.yaml  teleop.config
rover_gazebo/hooks/: setup_envs.sh.in
rover_gazebo/launch/: simulation.launch.py
rover_gazebo/launch/include/: simulate_robot.launch.py  spawn_robot.launch.py
rover_hardware_interface/: CMakeLists.txt  README.md  package.xml  rover_hardware_interfaces.xml
rover_hardware_interface/include/rover_hardware_interface/: utils.hpp
rover_hardware_interface/include/rover_hardware_interface/rover_controller/: rover_controller.hpp  rover_controller_types.hpp
rover_hardware_interface/include/rover_hardware_interface/rover_driver/: driver.hpp  rover_a1_driver.hpp  rover_driver.hpp
rover_hardware_interface/include/rover_hardware_interface/rover_driver/phidget_driver/: phidget_data_transformer.hpp  phidget_motor_driver.hpp  phidget_rover_driver.hpp  phidget_utils.hpp
rover_hardware_interface/include/rover_hardware_interface/rover_modbus/: modbus.hpp  modbus_connection.hpp  modbus_tcp_connection.hpp  modbus_types.hpp
rover_hardware_interface/include/rover_hardware_interface/rover_sensors/: phidget_imu_sensor.hpp
rover_hardware_interface/include/rover_hardware_interface/rover_system/: rover_a1_system.hpp  rover_system.hpp
rover_hardware_interface/include/rover_hardware_interface/system_e_stop/: system_e_stop.hpp
rover_hardware_interface/include/rover_hardware_interface/system_ros_interface/: system_ros_interface.hpp
rover_hardware_interface/src/: phidgets_spatial_parameters.yaml  utils.cpp
rover_hardware_interface/src/rover_controller/: rover_controller.cpp
rover_hardware_interface/src/rover_driver/: rover_a1_driver.cpp
rover_hardware_interface/src/rover_driver/phidget_driver/: phidget_data_transformer.cpp  phidget_motor_driver.cpp  phidget_rover_driver.cpp  phidget_utils.cpp
rover_hardware_interface/src/rover_modbus/: modbus.cpp
rover_hardware_interface/src/rover_sensors/: phidget_imu_sensor.cpp
rover_hardware_interface/src/rover_system/: rover_a1_system.cpp  rover_system.cpp
rover_hardware_interface/src/system_e_stop/: system_e_stop.cpp
rover_hardware_interface/src/system_ros_interface/: system_ros_interface.cpp
rover_localization/: CMakeLists.txt  README.md  package.xml
rover_localization/config/: rel_localization.yaml
rover_localization/launch/: rover_localization.launch.py
rover_metapackage/: CMakeLists.txt  README.md  hardware_deps.repos  package.xml  simulation_deps.repos
rover_msgs/: CMakeLists.txt  README.md  package.xml
rover_msgs/msg/: DriverState.msg  DriverStateNamed.msg  FaultFlag.msg  GpioState.msg  RoverDriverState.msg  RuntimeError.msg  SystemStatus.msg
rover_twist_mux/: CMakeLists.txt  README.md  package.xml
rover_twist_mux/config/: rover_twist_mux.yaml
rover_twist_mux/launch/: rover_twist_mux.launch.py
rover_web_bridge/: CMakeLists.txt  README.md  package.xml
rover_web_bridge/launch/: rover_web_bridge.launch.py
rover_world/: CMakeLists.txt  README.md  package.xml
rover_world/config/: teleop.config
rover_world/hooks/: setup_envs.sh.in
rover_world/launch/: rover_world.launch.py
rover_world/world/: rover_world.sdf
