<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_bringup</name>
  <version>1.0.1</version>
  <description> The package containing the default launch files and configuration used to start Rover</description>
  <maintainer email="potlogradu@gmail.com">radupotlog</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == hardware">launch</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == hardware">launch_ros</exec_depend>
  
  <!-- Rover dependency -->
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == hardware">rover_controller</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == hardware">rover_localization</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == hardware">rover_diag_manager</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == hardware">rover_twist_mux</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == hardware">rover_crfs_teleop</exec_depend>
  
  <!-- Rover web bridge dependency -->
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == hardware">rover_web_bridge</exec_depend>
  
  <!-- Rover foxglove bridge dependency -->
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == hardware">foxglove_bridge</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
