<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_controller</name>
  <version>1.0.0</version>
  <description>ROS2 controllers configuration for rover</description>
  <maintainer email="potlogradu@gmail.com">radupotlog</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mecanum_drive_controller</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  
  <!-- Rover dependency -->
  <exec_depend>rover_description</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == hardware">rover_hardware_interface</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
