<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_crfs_teleop</name>
  <version>1.0.1</version>
  <description>CRFS rover controller</description>
  <maintainer email="potlogradu@gmail.com">radupotlog</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Rover real hardware dependency -->
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == hardware">crsf_receiver</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
