<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_diag_manager</name>
  <version>1.0.0</version>
  <description>ROS2 diagnostic manager for rover</description>
  <maintainer email="potlogradu@gmail.com">radupotlog</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>pkg-config</build_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>generate_parameter_library</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <!-- Rover dependency -->
  <depend>rover_msgs</depend>
  
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>google-mock</test_depend>
  <test_depend>ros_testing</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
