<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_gazebo</name>
  <version>1.0.1</version>
  <description>The packages simulating behaviour of the rover</description>
  <maintainer email="potlogradu@gmail.com">radupotlog</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend condition="$ROVER_ROS_BUILD_TYPE == simulation">gz_ros2_control</depend>
  <depend condition="$ROVER_ROS_BUILD_TYPE == simulation">hardware_interface</depend>
  <depend condition="$ROVER_ROS_BUILD_TYPE == simulation">pluginlib</depend>
  <depend condition="$ROVER_ROS_BUILD_TYPE == simulation">rclcpp</depend>
  <depend condition="$ROVER_ROS_BUILD_TYPE == simulation">rclcpp_lifecycle</depend>
  <depend condition="$ROVER_ROS_BUILD_TYPE == simulation">realtime_tools</depend>
  <depend condition="$ROVER_ROS_BUILD_TYPE == simulation">ros_gz_sim</depend>
  <depend condition="$ROVER_ROS_BUILD_TYPE == simulation">std_msgs</depend>
  <depend condition="$ROVER_ROS_BUILD_TYPE == simulation">std_srvs</depend>

  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">controller_manager</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">launch</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">launch_ros</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">nav2_common</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">robot_state_publisher</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">ros_gz_bridge</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">tf2_ros</exec_depend>

  <!-- Rover gazebo world dependency -->
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">rover_world</exec_depend>
  
  <!-- Rover dependency -->
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">rover_description</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">rover_controller</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">rover_localization</exec_depend>
  <exec_depend condition="$ROVER_ROS_BUILD_TYPE == simulation">rover_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
