<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_localization</name>
  <version>1.0.1</version>
  <description>ROS2 localization for rover</description>
  <maintainer email="potlogradu@gmail.com">radupotlog</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
